# Physics

./: .gitignore  CMakeLists.txt  Collision.cpp  README.md  test.cpp  vcpkg.json
include/: Collision.hpp  config.hpp.in
include/Physics/: ApplyCollision.hpp  Collider.hpp  Collision.hpp  CollisionTest.hpp  PhysicsWorld.hpp
src/: ApplyCollision.cpp  CMakeLists.txt  Collider.cpp  Collision.cpp  CollisionTest.cpp  PhysicsWorld.cpp
tests/: CMakeLists.txt  test.cpp
